# QuantMind

./: .env.example  .gitignore  AGENTS.md  AI_IDE_常见问题修复与Skill迁移手册.md  BACKTEST_LOOKAHEAD_BIAS_FIX.md  CLAUDE.md  M4-P1-3_topk10_rootcause_report.md  README.md  RESEARCH_DATA_FIX_REPORT.md  RESEARCH_PLATFORM_FIX_LOG.md  T1.7_P2_real_pyqlib_report.html  T1.7_P2_real_pyqlib_results.json  T1.7_phase1_consistency_report.md  T1.7_phase2_alignment_report.md  T1.7_向量化回测引擎评估报告.md  T6.5_service_jwt_flow.md  db  docker-compose.server.yml  docker-compose.yml  package-lock.json  pyproject.toml  remote_setup.py  start.sh  sync_to_gitee.sh  test_cache.py  投研平台数据展示问题修复总结.md
.github/workflows/: ci.yml
backend/: main_oss.py  run_tests.py
backend/DOCS/: backend_smoke_checklist.md  gke_prod_parameter_sheet.md  gke_prod_release_runbook.md  gke_test_release_runbook.md
backend/config/: config_manager.py  settings.py
backend/scratch/: server_model_management_ops.py  server_model_management_utils.py
backend/scripts/: etl_alerts.py  etl_alignment_monitor.py  etl_data_quality.py  etl_scheduler.py  fill_sdl_financial_from_baostock.py  fill_sdl_from_parquet.py  run_cache_warmup.py  sync_official_data_update.py  update_sdl_complete_pipeline.py  update_sdl_industry.py
backend/shared/: ai_inference_client.py  api_spec.py  auth.py  batch_processor.py  cache_enhanced.py  cache_warmup.py  celery_app.py  circuit_breaker.py  config_manager.py  cors.py  cos_config.py  cos_service.py  database.py  database_manager_v2.py  database_optimizer.py  database_pool.py  encryption.py  error_contract.py  feature_preprocess.py  file_security.py  file_upload_service.py  fundamental_aligner.py  health.py  http_client.py  import_refactor.py  inference_contract.py  logging_config.py  margin_stock_pool.py  market_db_manager.py  message_broker.py  metrics.py  model_registry.py  monitoring.py  notification_preference.py  notification_publisher.py  path_manager.py  qmt_bridge_auth.py  readiness.py  redis_sentinel_client.py  remote_redis_client.py  (+18 more)
backend/tests/: test_ai_fix.py  test_backtest_consistency.py  test_backtest_guardrails.py  test_backtest_real_pyqlib.py  test_backtest_result_normalization_paths.py  test_basic_risk_service.py  test_cn_exchange_quote_fallback.py  test_custom_strategy_builder.py  test_etl_monitoring.py  test_export_utils_quantity_precedence.py  test_model_shap_summary_parser.py  test_order_link_robustness.py  test_order_reconciliation.py  test_qlib_utils_safe_backtest.py  test_qmt_stability.py  test_risk_control.py  test_simple_signal.py  test_strategy_formatter.py  test_strategy_template_loader.py  test_strategy_wrapper_runtime.py  test_training_explain_config.py  test_training_shap_summary.py
config/: risk_rules.yaml  settings.py
config/features/: model_training_feature_catalog_v1.json
data/: quantmind_init.sql  quantmind_schema.sql  upgrade_v1.1.0.sql  融资融券.json
data/migrations/: fix_inference_runs_table.sql  upgrade_v1.4.0_stock_tag.sql
data/stocks/: stocks_index.json
db/: README.md
db/feature_snapshots/: model_features_2016.metadata.json  model_features_2017.metadata.json  model_features_2018.metadata.json  model_features_2019.metadata.json  model_features_2020.metadata.json  model_features_2021.metadata.json  model_features_2022.metadata.json  model_features_2023.metadata.json  model_features_2024.metadata.json  model_features_2025.metadata.json  model_features_2026.metadata.json
db/feature_snapshots_rebuild/: model_features_2025.metadata.json  model_features_2026.metadata.json
deploy/: README.md  deploy.sh  quick-deploy.sh  update.sh
docker/: Dockerfile.market-data  Dockerfile.oss  patch_qlib.py
docker/nginx/: README.md  cors.conf
docker/training/: README.md  config_example.yaml  train.py
docs/: 146维特征方案规范.md  AI_IDE_提示词与策略规范.md  Electron编译方案.md  Qlib内部策略开发规范.md  Qlib回测API集成指南.md  Qlib架构与回测原理.md  QuantMind_152维特征方案规范.md  QuantMind策略编写手册_v2.md  Web部署指南.md  alpha158训练计划.md  copaw代理服务.md  fundamental_aligned_数据覆盖白皮书.md  quantbot代理服务.md  stock_daily_latest_维护文档.md  向量模型配置指南.md  实盘交易因子筛选手册.md  开源版数据更新客户端使用指南.md  数据包安装指南.md  数据配置指南.md  架构图文档.md  模拟交易重构方案_2026-06.md  系统架构文档.md  部署指南.md
docs/archive/: 前端导入告警修复记录.md
electron/: .env.development  .env.example  .env.production  .env.template  .eslintrc.any.cjs  README.md  index.html  package.json  vite.config.ts
electron/electron/: main.ts  preload.ts
electron/src/: App.tsx
quantmind-m3-task-breakdown/: quantmind-m3-task-breakdown.html
scratch/: check_adj.py  check_moutai.py  check_returns.py  check_vanke.py  check_vanke_full.py  clear_redis_cache.py  clear_redis_cache_v2.py  clear_redis_cache_v3.py  columns.txt  inspect_parquet.py  sync_stock_daily.py  test_backend_sync.py  test_ws.py
scripts/: README.md  cleanup_db_dotfiles.py  fetch_corporate_actions.md  fetch_corporate_actions.py  full_update.py  init_config.py  merge_ohlcv_to_training_data.py  sync_factors_to_parquet.py  sync_to_postgres_v2.py  市场数据到redis.py
scripts/data/: calc_hf_52d_features.py
scripts/db_init/: init_market_data.py
scripts/ops/: deploy.sh  install_cleanup_cron.sh  workstation_ssh.sh
scripts/postgres/: README.md
scripts/redis/: sync_stock_daily_latest_to_market_redis.py
strategy_templates/: risk_guard_topk.json  risk_guard_topk.py  value_growth.json  value_growth.py
tools/: reconstruct_qlib_hybrid.py  市场数据到redis.py
tools/qmt_agent/: README.md  _callback.py  agent.py  auth.py  build_windows_agent.py  client.py  config.py  desktop_app.py  help.md  qmt_agent.py  qmt_agent_desktop.spec  qmt_agent_setup.iss  reporter.py  requirements.txt  runtime_supervisor.py  runtime_workers.py  schedule_policy.py  theme.qss  triage.py  updater.py  upload_release_to_cos.py  version.json
website/: .env.example  api.html  changelog.html  data-download.html  desktop-download.html  download-config.json  download.html  faq.html  features.html  index.html  privacy.html  qmt-agent.html  quickstart.html  terms.html
website/css/: style.css
website/js/: main.js
website/nginx/: oss.quantmindai.cn.csr  oss.quantmindai.cn_bundle.crt
(+843 files in other folders)
